added album table

--- a/Week-1/assignment-2/index.html
+++ b/Week-1/assignment-2/index.html
@@ -1,27 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="./scss/style.css">
     <title>Audio Player</title>
 </head>
+
 <body>
     <div class="parent-container">
         <div class="layout-container">
-<div class="songs-board">
-<nav>
-div.
-</nav>
+            <div class="songs-board">
+                <div class="navigator">
+                    <i class="las la-bars"></i>
 
+                    <i class="las la-home"></i>
 
-</div>
+                    <i class="las la-search"></i>
 
-<div class="player">
+                    <i class="las la-volume-up"></i>
 
-</div>
+                    <i class="las la-user"></i>
+
+                    <i class="las la-cog"></i>
+
+                    <i class="lab la-spotify"></i>
+
+                    <i class="lab la-soundcloud"></i>
+                </div>
+                <div class="board">
+                    <div class="grey-box">
+                        <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="album-img">
+
+                        <div class="song-info">
+                            <h3 class="song-title">CattyBoard Top 100 Single Charts (11.06.36)</h3>
+                            <p class="artist">Unknown Artist</p>
+                            <p class="info">2016.charts.100songs</p>
+                        </div>
+                    </div>
+
+                    <div class="table-box">
+                        <table>
+                            <tr>
+                                <th>Company</th>
+                                <th>Contact</th>
+                                <th>Country</th>
+                            </tr>
+                            <tr>
+                                <td>Alfreds Futterkiste</td>
+                                <td>Maria Anders</td>
+                                <td>Germany</td>
+                            </tr>
+                            <tr>
+                                <td>Centro comercial Moctezuma</td>
+                                <td>Francisco Chang</td>
+                                <td>Mexico</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+            </div>
+
+            <footer class="footer-playbox">
+
+            </footer>
         </div>
     </div>
 </body>
+
 </html>
