added songs table

--- a/Week-1/assignment-2/index.html
+++ b/Week-1/assignment-2/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="parent-container">
         <div class="layout-container">
-            <div class="songs-board">
+            <div class="songs-playboard">
                 <div class="navigator">
                     <i class="las la-bars"></i>
 
@@ -33,42 +33,68 @@
                     <i class="lab la-soundcloud"></i>
                 </div>
                 <div class="board">
-                    <div class="grey-box">
-                        <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="album-img">
+                    <div class="play-box">
+                        <div class="img-box">
+
+                            <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="album-img">
+                        </div>
 
                         <div class="song-info">
-                            <h3 class="song-title">CattyBoard Top 100 Single Charts (11.06.36)</h3>
+                            <h3 class="title">CattyBoard Top 100 Single Charts (11.06.36)</h3>
                             <p class="artist">Unknown Artist</p>
                             <p class="info">2016.charts.100songs</p>
+
+                            <div class="songs-options">
+                                <span>
+                                    <i class="las la-play"></i> Play all
+                                </span>
+                                <span>
+                                    <i class="las la-plus"></i> Add to
+                                </span>
+                                <span>
+                                    <i class="las la-ellipsis-h"></i> More
+                                </span>
+                            </div>
                         </div>
+
+
                     </div>
 
-                    <div class="table-box">
-                        <table>
+
+                    <table class="album-table">
+                        <tbody>
                             <tr>
-                                <th>Company</th>
-                                <th>Contact</th>
-                                <th>Country</th>
+                                <td>1. One Dance</td>
+                                <td>Crate feat Catlid & Cyla</td>
+                                <td>2:54</td>
+                                <td> <span><a href="http://google.com"> CATTY CLOUD SYNC</a> </span> </td>
                             </tr>
                             <tr>
-                                <td>Alfreds Futterkiste</td>
-                                <td>Maria Anders</td>
-                                <td>Germany</td>
+                                <td>2. Panda</td>
+                                <td>Cattee</td>
+                                <td>4:06</td>
+                                <td><span><a href="http://google.com"> CATTY CLOUD SYNC</a> </span></td>
                             </tr>
                             <tr>
-                                <td>Centro comercial Moctezuma</td>
+                                <td>3. Can't stop feeling! comercial Moctezuma</td>
                                 <td>Francisco Chang</td>
-                                <td>Mexico</td>
+                                <td>3:56</td>
+                                <td><span> <a href="http://google.com">CATTY CLOUD SYNC</a> </span></td>
                             </tr>
-                        </table>
-                    </div>
+                            <tr>
+                                <td>4. Work from home</td>
+                                <td>Cat Harmony feat colla</td>
+                                <td>3:34</td>
+                                <td><span> <a href="http://google.com">CATTY CLOUD SYNC</a> </span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
 
             </div>
 
-            <footer class="footer-playbox">
-
-            </footer>
+          
         </div>
     </div>
 </body>
