--- a/Week-1/assignment-2/index.html
+++ b/Week-1/assignment-2/index.html
@@ -94,7 +94,24 @@
 
             </div>
 
-          
+            <footer class="footer-playbox">
+
+                <div class="song-favicon">
+                    <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg" alt="song-favicon">
+                    <div class="more-info">
+                        <p>If it ain't love</p>
+                        <p>Catson Derulo</p>
+                    </div>
+                </div>
+
+                <div class="song-controlls">
+                    <i class="las la-step-backward"></i>
+                    <i class="las la-pause"></i>
+                    <i class="las la-step-forward"></i>
+                    <i class="las la-undo-alt"></i>
+                    <i class="las la-random"></i>
+                </div>
+            </footer>
         </div>
     </div>
 </body>
