--- a/Week-2/assignment-1/index.html
+++ b/Week-2/assignment-1/index.html
@@ -1,16 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./scss/style.css">
     <title>Week 2 / Assignment 1</title>
 </head>
+
 <body>
     <div class="parent-container">
         <div class="layout-container">
-            
+            <div class="hero-container">
+                <h1>Mystay Homes</h1>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit architecto voluptatibus laboriosam</p>
+
+                <div class="article">
+                    <div class="box1">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At maiores accusamus, nulla
+                            repellendus quis sunt tempore harum, culpa aliquid, suscipit animi exercitationem iusto?
+                            Doloribus placeat neque accusantium ex consequuntur illum.</p>
+
+                        <img src="https://ik.imagekit.io/k3m4pqzpmlr/coupons/theog-20220129083825_XqK_wo4Xl.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1650732187815"
+                            alt="home-img" />
+                    </div>
+                    <div class="box2">
+                        <div>
+                            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
+                                omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
+                                perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
+                        </div>
+                        <div>
+                            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
+                                omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
+                                perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
+                        </div>
+                        <div>
+                            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero deleniti iusto, minus
+                                omnis delectus, accusantium, soluta sunt corporis ipsa est laudantium ipsum iure quia
+                                perspiciatis? Repellendus mollitia quibusdam reprehenderit ut.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-container">
+                <form action="">
+                    <label for="title">Title
+                        <input type="radio">
+                        <input type="radio">
+                        <input type="radio">
+                    </label>
+
+                    <label for="firstname">
+                        First Name <input type="text" id="firstname">
+                    </label>
+                    <label for="lastname">
+                        Last Name <input type="text" id="lastname">
+                    </label>
+
+                    <label for="email">
+                        Email <input type="email" id="email">
+                    </label>
+
+                    <label for="phonenumber">
+                        Phone Number <input type="text" id="phonenumber">
+                    </label>
+
+                    <label for="password">
+                        Password <input type="password" id="password">
+                    </label>
+
+                    <label for="cpassword">
+                        Confirm Password <input type="password" id="cpassword">
+                    </label>
+
+                    <label for="country">
+                        Country <input type="text" id="country">
+                    </label>
+
+                    <p class="terms">
+                        <input type="checkbox">
+                        <a href="www.google.com">Terms & Conditions</a>
+                    </p>
+
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
         </div>
+        <footer class="footer-container">
+            <div class="footer-box">
+                <h1>Mystay Homes</h1>
+
+                <div>
+                    <h5>About Us</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatum accusamus in,
+                        adipisci veritatis fugit expedita quia itaque illum beatae vel alias eaque, aspernatur ex
+                        reiciendis, eum iste voluptates suscipit?
+                    </p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
